fix scrollbar from header

--- a/public/src/envnpb_front.sass
+++ b/public/src/envnpb_front.sass
@@ -53,7 +53,7 @@ body
 	width: 100%
 	height: 133px
 	background-image: url(http://s3.engelvoelkersnewportbeach.com/images/system/bg/front/header.jpg)
-	overflow-y: hidden
+	overflow: hidden
 	#header
 		height: 84px
 		width: 1020px
@@ -78,6 +78,7 @@ body
 		height: 50px
 		width: 1020px
 		margin: 0px auto
+		overflow: hidden
 		ul
 			margin: 0px auto
 			li.cufon-active
