--- a/public/stylesheets/base_packaged.css
+++ b/public/stylesheets/base_packaged.css
@@ -13,13 +13,13 @@ body object {outline: none}
 body span.left {float: left}
 body span.right {float: right; font-size: 11px; line-height: 18px; font-style: italic}
 #upper_pagewrapper.home {height: 566px; overflow: hidden}
-#upper_pagewrapper {z-index: 0; width: 100%; height: 133px; background-image: url(http://s3.engelvoelkersnewportbeach.com/images/system/bg/front/header.jpg); overflow-y: hidden}
+#upper_pagewrapper {z-index: 0; width: 100%; height: 133px; background-image: url(http://s3.engelvoelkersnewportbeach.com/images/system/bg/front/header.jpg); overflow: hidden}
 #upper_pagewrapper #header {height: 84px; width: 1020px; background-image: url(http://s3.engelvoelkersnewportbeach.com/images/system/bg/front/header.jpg); margin: 0px auto}
 #upper_pagewrapper #header #logo {height: 60px; width: 546px}
 #upper_pagewrapper #header #logo a img {margin: 22px 0 0 42px}
 #upper_pagewrapper #header #extra {height: 19px; right: 0px; margin-top: -55px; float: right; margin-right: 42px}
 #upper_pagewrapper #header #extra img {float: left; margin-left: 5px}
-#upper_pagewrapper #navbar {height: 50px; width: 1020px; margin: 0px auto}
+#upper_pagewrapper #navbar {height: 50px; width: 1020px; margin: 0px auto; overflow: hidden}
 #upper_pagewrapper #navbar ul {margin: 0px auto}
 #upper_pagewrapper #navbar ul li.cufon-active h2 {color: white}
 #upper_pagewrapper #navbar ul li {list-style: none; height: 25px; line-height: 25px; vertical-align: middle; float: left; margin: 14px 32px}
